--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3609647804";
+    const serviceWorkerVersion = "585838806";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script>
+    var dartPdfJsVersion = "3.2.146";
+  </script>
+  <script src="print.js"></script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
